[update] some fragments content were wrapped; now it has been prevented; [todo] researching regarding layouts when there is no available space, especially browsers are not full windowed;

--- a/src/main/webapp/styles/custom/home.css
+++ b/src/main/webapp/styles/custom/home.css
@@ -4,7 +4,8 @@
     margin-right: 30px;
 }
 
-.each-fragment-container {
+.each-fragment-container, .each-fragment {
+	white-space: nowrap;
     overflow-x: auto;
     clear: both;
 }
@@ -227,7 +228,5 @@
 }
 
 #quick-search-area, input {
-/* 	min-width:200px; */
-/* 	max-width:260px; */
-    width: 17%;
+    width: 16%;
 }
